# auto-smart-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  auto-smart-commit.py  auto_smart_commit.py  pylama.ini  pyproject.toml  test.py
